--- a/src/main/resources/Ajoututilisateurs.fxml
+++ b/src/main/resources/Ajoututilisateurs.fxml
@@ -36,9 +36,9 @@
       <ComboBox fx:id="ftroleBox" layoutX="162.0" layoutY="138.0" promptText="role">
          <items>
             <FXCollections fx:factory="observableArrayList">
-               <String fx:value="Client" />
-               <String fx:value="Admin" />
-               <String fx:value="Livreur" />
+               <String fx:value="CLIENT" />
+               <String fx:value="ADMIN" />
+               <String fx:value="LIVREUR" />
             </FXCollections>
          </items>
       </ComboBox>
