--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="542.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Login">
+<AnchorPane prefHeight="533.0" prefWidth="426.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Login">
    <children>
       <ImageView fitHeight="35.0" fitWidth="19.0" layoutX="296.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/eye-clipart-transparent.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="37.0" layoutY="134.0" opacity="0.42" prefHeight="363.0" prefWidth="380.0" style="-fx-background-color: #d9b336;">
+      <AnchorPane layoutX="37.0" layoutY="134.0" opacity="0.42" prefHeight="358.0" prefWidth="374.0" style="-fx-background-color: #d9b336;">
          <children>
             <Label fx:id="captchaLabel" layoutX="102.0" layoutY="194.0" prefHeight="39.0" prefWidth="142.0" stylesheets="@stylesheet.css" text="" textFill="WHITE" />
             <TextField fx:id="captchaInput" layoutX="102.0" layoutY="242.0" prefHeight="40.0" prefWidth="142.0" promptText="Enter CAPTCHA" />
@@ -27,6 +27,11 @@
                   <Font name="Algerian" size="17.0" />
                </font>
             </Button>
+            <ImageView fitHeight="64.0" fitWidth="96.0" layoutX="300.0" layoutY="282.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/nourriture.png" />
+               </image>
+            </ImageView>
          </children></AnchorPane>
       <PasswordField fx:id="ftmot_de_passe" layoutX="141.0" layoutY="265.0" />
       <TextField fx:id="ftemail" layoutX="141.0" layoutY="200.0" promptText="email" />
@@ -42,14 +47,14 @@
       </Label>
       <ToggleButton fx:id="toggleButton" layoutX="294.0" layoutY="265.0" mnemonicParsing="false" onAction="#toggleButton" opacity="0.0" prefHeight="26.0" prefWidth="20.0" text="Show" />
       <Label fx:id="ShownPassword" layoutX="172.0" layoutY="295.0" text="shown password" />
-      <AnchorPane layoutY="-129.0" prefHeight="240.0" prefWidth="849.0" style="-fx-background-color: #960000;">
+      <AnchorPane layoutX="-1.0" layoutY="-120.0" prefHeight="252.0" prefWidth="422.0" style="-fx-background-color: #960000;">
          <children>
-            <Label layoutX="319.0" layoutY="169.0" prefHeight="39.0" prefWidth="150.0" text="LOG IN" underline="true">
+            <Label layoutX="113.0" layoutY="164.0" prefHeight="39.0" prefWidth="150.0" text="LOG IN" underline="true">
                <font>
                   <Font name="Algerian" size="34.0" />
                </font>
             </Label>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="700.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="279.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                </image>
@@ -58,10 +63,5 @@
       </AnchorPane>
 
             <Hyperlink layoutX="144.0" layoutY="492.0" onAction="#OnForget" onDragDetected="#opt" text="mot_de_passe oublié" />
-      <ImageView fitHeight="150.0" fitWidth="142.0" layoutX="567.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/forgot-password%20(1).png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
