--- a/src/main/resources/ForgetPassword.fxml
+++ b/src/main/resources/ForgetPassword.fxml
@@ -39,7 +39,7 @@
             <Font name="Algerian" size="21.0" />
          </font>
       </Button>
-      <Button layoutX="14.0" layoutY="475.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="42.0" prefWidth="134.0" styleClass="AjouterUtilisateur" text="Retour" textFill="#363333">
+      <Button layoutX="14.0" layoutY="475.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="42.0" prefWidth="134.0" style="-fx-background-color: transparent;" styleClass="AjouterUtilisateur" textFill="#363333">
          <font>
             <Font name="Algerian" size="18.0" />
          </font>
@@ -59,5 +59,10 @@
             <Font name="Algerian" size="21.0" />
          </font>
       </Button>
+      <ImageView fitHeight="49.0" fitWidth="66.0" layoutX="29.0" layoutY="472.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/Capture%20d'écran%202024-03-06%20150938.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
