--- a/src/main/resources/tn/esprit/zizo/CommandeGestionMenu.fxml
+++ b/src/main/resources/tn/esprit/zizo/CommandeGestionMenu.fxml
@@ -28,8 +28,9 @@
          </columns>
      </TableView>
    <Button layoutX="19.0" layoutY="49.0" onAction="#onFront" prefHeight="30.0" prefWidth="87.0" text="&lt;-- Front" />
-   <TextField fx:id="RechereField" layoutX="239.0" layoutY="37.0" prefHeight="29.0" prefWidth="502.0" promptText="Recherche" />
-   <Button layoutX="749.0" layoutY="34.0" onAction="#OnRecherche" prefHeight="30.0" prefWidth="87.0" text="Recherche" />
+   <TextField fx:id="RechereField" layoutX="239.0" layoutY="37.0" prefHeight="29.0" prefWidth="417.0" promptText="Recherche" />
+   <Button layoutX="666.0" layoutY="37.0" onAction="#OnRecherche" prefHeight="30.0" prefWidth="97.0" text="Recherche" />
     <ComboBox fx:id="filterComboBox" layoutX="845.0" layoutY="39.0" prefHeight="25.0" prefWidth="128.0" promptText="Filter by" />
+   <Button layoutX="769.0" layoutY="37.0" onAction="#OnExport" prefHeight="30.0" prefWidth="65.0" text="Export" />
 
 </AnchorPane>
