--- a/gestionEvenement/src/main/resources/gui/addEvenement.fxml
+++ b/gestionEvenement/src/main/resources/gui/addEvenement.fxml
@@ -44,9 +44,9 @@
       <Button fx:id="btnImport" layoutX="399.0" layoutY="300.0" mnemonicParsing="false" onAction="#ajouterImage" prefHeight="26.0" prefWidth="78.0" styleClass="import-btn" stylesheets="@hello-view.css" text="Upload" />
       <Label layoutX="306.0" layoutY="304.0" prefHeight="18.0" prefWidth="86.0" text="Choisir l'image" />
       <ImageView fx:id="imageInput" fitHeight="72.0" fitWidth="172.0" layoutX="304.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="90.0" fitWidth="128.0" layoutX="642.0" layoutY="8.0">
+      <ImageView fitHeight="97.0" fitWidth="144.0" layoutX="642.0" layoutY="8.0" pickOnBounds="true">
          <image>
-            <Image url="@../../../../../../../Desktop/image/418025501_916964343338013_8117190284543088009_n.png" />
+            <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
          </image>
       </ImageView>
         
