--- a/gestionEvenement/src/main/resources/gui/listEvenementFront.fxml
+++ b/gestionEvenement/src/main/resources/gui/listEvenementFront.fxml
@@ -18,7 +18,7 @@
                 <Font name="System Bold" size="36.0" />
             </font>
         </Label>
-        <Label layoutX="237.0" layoutY="38.0" prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: d41c1c;" text="                                         NOS SERVICES POUR VOUS" textFill="WHITE">
+        <Label layoutX="-5.0" layoutY="-7.0" prefHeight="99.0" prefWidth="1240.0" style="-fx-background-color: d41c1c;" text="                                                                               NOS SERVICES POUR VOUS" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="21.0" />
             </font>
@@ -51,6 +51,11 @@
       <ImageView fitHeight="115.0" fitWidth="145.0" layoutX="22.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/iiiiii.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="99.0" fitWidth="177.0" layoutX="1055.0" layoutY="-7.0">
+         <image>
+            <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
          </image>
       </ImageView>
     </children>
