--- a/gestionEvenement/src/main/resources/gui/listReservation.fxml
+++ b/gestionEvenement/src/main/resources/gui/listReservation.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="listReservationtPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.listReservationController">
+<AnchorPane fx:id="listReservationtPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.listReservationController">
     <stylesheets>
         <URL value="@hello-view.css" />
     </stylesheets>
@@ -41,6 +41,11 @@
         <TextField fx:id="txtSearchReservation" layoutX="477.0" layoutY="95.0" prefHeight="40.0" prefWidth="282.0" promptText="Search..." styleClass="search" stylesheets="@hello-view.css" />
         <Button fx:id="btnDeleteReservation" layoutX="812.0" layoutY="94.0" mnemonicParsing="false" onAction="#supprimerReservation" prefHeight="41.0" prefWidth="94.0" styleClass="btn" stylesheets="@hello-view.css" text="Delete" />
         <ComboBox fx:id="comboBoxTri" layoutX="956.0" layoutY="94.0" onAction="#TriChoice" prefHeight="40.0" prefWidth="137.0" promptText="Trier Selon :" styleClass="comboBox" stylesheets="@hello-view.css" />
+      <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="1065.0" layoutY="-54.0">
+         <image>
+            <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
+         </image>
+      </ImageView>
 
     </children>
 
